--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ rand = "0.8"
 clap = "3.0"
 num-bigint = "0.4"
 num-traits = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+anyhow = "1.0"
